Dark mode fixed!

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,76 +1,74 @@
-@use './base/reset';
-@use './base/colors' as colors;
-@use './base/fonts' as font;
+@use "./base/reset";
+@use "./base/colors" as colors;
+@use "./base/fonts" as font;
 
-.container{
-    display: grid;
-    grid-template-columns: 6% 30% 30% 34%;
-    grid-template-rows: 10% 60% 40% 35%;
-    gap: 1rem;
-    font-family: 'Mulish-medium';
-    place-items: center;
+.container {
+  display: grid;
+  grid-template-columns: 6% 30% 30% 34%;
+  grid-template-rows: 10% 60% 40% 30%;
+  gap: 1rem;
+  font-family: "Mulish-medium";
+  place-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: colors.$white;
+
+  .sidebarContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-row: 1/4;
+    grid-column: 1/2;
     width: 100%;
-    height: 100vh;
-    background-color: colors.$white;
+    height: 100%;
+  }
 
-    .sidebarContainer{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        grid-row: 1/4;
-        grid-column: 1/2;
-        width: 100%;
-        height: 100%;
-    }
+  .navbarSection {
+    grid-row: 1/4;
+    grid-column: 3/4;
+    width: 300%;
+    height: 100%;
+  }
 
-    .navbarSection{
-        grid-row: 1/4;
-        grid-column: 3/4;
-        width: 300%;
-        height: 100%;
-    }
+  .transferSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-row: 3/5;
+    grid-column: 2/3;
+    width: 100%;
+    height: 80%;
+  }
 
-    .transferSection{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        grid-row: 3/5;
-        grid-column: 2/3;
-        width: 100%;
-        height: 80%;
-    }
-
-    .myCardsSection{
-        grid-row: 2/3;
-        grid-column: 3/4;
-        width: 100%;
-        height: 70%;
-    }
-    .contactsSection{
-        grid-row: 3/4;
-        grid-column: 3/4;
-        width: 100%;
-        height: 100%;
-    }
-    .cardImageSection{
-        grid-row: 2/3;
-        grid-column: 1/3;
-        width: 60%;
-        height: 75%;
-    }
-    .transactionsContainer{
-        grid-row: 1/3;
-        grid-column: 4/4;
-        width: 80%;
-        height: 40%;
-    }
-    .chartContainer{
-        grid-row: 4/4;
-        grid-column: 4/4;
-        width: 70%;
-        height: 100%;
-        margin-bottom: 70%;
-        }
-    
+  .myCardsSection {
+    grid-row: 2/3;
+    grid-column: 3/4;
+    width: 100%;
+    height: 70%;
+  }
+  .contactsSection {
+    grid-row: 3/4;
+    grid-column: 3/4;
+    width: 100%;
+    height: 100%;
+  }
+  .cardImageSection {
+    grid-row: 2/3;
+    grid-column: 1/3;
+    width: 60%;
+    height: 75%;
+  }
+  .transactionsContainer {
+    grid-row: 1/3;
+    grid-column: 4/4;
+    width: 80%;
+    height: 40%;
+  }
+  .chartContainer {
+    grid-row: 4/4;
+    grid-column: 4/4;
+    width: 70%;
+    height: 100%;
+    margin-bottom: 70%;
+  }
 }
-
